enhanced user with role; command line runner to insert data